# GLRenderer

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Cube.cpp  Cube.hpp  CubeLights.hpp  Drawable.cpp  Drawable.hpp  EventManager.cpp  EventManager.hpp  FragmentShader.frag  Framework.hpp  GLRenderer.vcxproj  GLRenderer.vcxproj.filters  Light.hpp  LightingFragmentShader.frag  Material.hpp  Mesh.hpp  Model.cpp  Model.hpp  ModelLights.hpp  README.md  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Sphere.cpp  VertexShader.vert  main.cpp
Models/earth/: earth.mtl
Models/moon/: moon.mtl
Models/sun/: Sun.mtl
OpenGLIncludes/include/: glad.c
deprecatedLibStuff/OpenGLIncludes/lib/: assimp-vc140-mt.lib
fileRecources/Models/earth/: earth.mtl
fileRecources/Shaders/: SingleColorFragShader.frag  VertexShader.vert
fileRecources/deprecatedLibStuff/OpenGLIncludes/include/glad/: glad.h
src/: CMakeLists.txt  Cube.cpp  Cube.hpp  Drawable.hpp  EventManager.cpp  Framework.hpp  GLRenderer.sln  Mesh.hpp  Model.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Sphere.hpp  main.cpp
x64/Debug/: GLRenderer.exe.recipe
